--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,12 @@
         android:theme="@style/Theme.CRUDOOO"
         tools:targetApi="31">
         <activity
+            android:name=".registrarse"
+            android:exported="false" />
+        <activity
+            android:name=".login"
+            android:exported="false" />
+        <activity
             android:name=".splash_screen"
             android:exported="false" />
         <activity
